<resources>

    <string name="app_name">bigbasket</string>
    <string name="login">Login</string>
    <string name="user">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="title">LOGIN</string>
    <string name="admin">ADMIN</string>
    <string name="img">image</string>
    <string name="userprofile">USER PROFILE</string>
    <string name="fname">Thimira</string>
    <string name="lname">Sobash</string>
    <string name="email">Thimi1234@gmail.com</string>
    <string name="password">*************</string>
    <string name="fname1">First Name</string>
    <string name="lname1">Last Name</string>
    <string name="email3">Email</string>
    <string name="password1">Password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="title1">USER REGISTRATION</string>
    <string name="compass">Confirm Password</string>
    <string name="useredit">Edit Profile</string>
    <string name="title2">Total Bill</string>
    <string name="img11">background image</string>
    <string name="img1">logo</string>
    <string name="order">Order Payment</string>
    <string name="delivery">Delivery Payment</string>
    <string name="total">Total Payment</string>
    <string name="order1">Rs.450.00</string>
    <string name="delivery1">Rs.150.00</string>
    <string name="total1">Rs.600.00</string>

    //IT19188164-Loshini Nilupuli S.K.
        //activity_admin_login_page.xml
        <string name="enter_username">Enter Username</string>
        <string name="enter_password">Enter Password</string>
        <string name="login2">Login</string>
        <string name="userImage">image</string>
        <string name="passLogo">Image</string>
        <string name="adminIcon">image</string>

        //activity_admin_home_page.xml
        <string name="vegetable_store">Vegetable Store</string>
        <string name="fruit_store">Fruit Store</string>

        //activity_vegetable_page.xml
        <string name="veg_Store">VEGETABLE STORE</string>
        <string name="name">Item Name :</string>
        <string name="quantity">Quantity :</string>
        <string name="price">Price :</string>
        <string name="itemNo">Item No :</string>
        <string name="btnAdd">Add Item</string>
        <string name="btnView">View All</string>
        <string name="btnUpdate">Update</string>
        <string name="btnDelete">Delete</string>
        <string name="addImage">Image</string>

        //activity_view_veg_page.xml
        <string name="exampleNo">V001</string>
        <string name="exampleName">Carrot</string>
        <string name="exampleQuan">1Kg</string>
        <string name="examplePrice">Rs.120.00</string>
        <string name="btnorder">Order</string>
        <string name="carrot">Image</string>

        //activity_fruit_page.xml
        <string name="fruit_Store">FRUIT STORE</string>

        //activity_view_fruit_page.xml
        <string name="exampleNo2">F100</string>
        <string name="exampleName2">Pineapple</string>
        <string name="exampleQuan2">1Kg</string>
        <string name="examplePrice2">Rs.150.00</string>
        <string name="btnorder2">Order</string>
        <string name="grapes">Image</string>

</resources>