<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fruit1"
    app:contentPadding="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/colorLightBrown"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-170dp"
        tools:layout_editor_absoluteY="156dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/imgloop1"
            android:layout_width="100dp"
            android:layout_height="113dp"
            android:src="@drawable/pinapple"
            android:contentDescription="@string/carrot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemNo"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtNo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtQuan2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtPrice2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnOrder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnorder2"
        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

</androidx.constraintlayout.widget.ConstraintLayout>